# OperatingSystems

lab1/: Daemon.cpp  Daemon.h  config.txt  main.cpp
lab2/: CMakeLists.txt  Makefile  build.sh
lab2/src/: client.cpp  conn.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h  host.cpp  logger.cpp  logger.h
